--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
     <div class="card">
         <div class="card__descricao">
             <div class="cdescricao">
-                <div class="estrelinhas"><img src="img/estrelinhas.svg" alt="Estrelinhas autora do mês"></div>
+                <div class="estrelinhas"><img src="img/Estrelinhas.svg" alt="Estrelinhas autora do mês"></div>
                 <h3 class="descricao__titulo">Autora do Mês</h3>
                 <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
                 <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em Front-end</p>
